--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
+/* 
+font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+ */
+
 body{
     min-height: 100vh;
     margin: 0;
@@ -10,6 +16,9 @@ body{
     width: 100%;
     height: 40px;
     background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
 }
 
 #plate {
@@ -17,11 +26,35 @@ body{
     height: 80vh;
 
 }
-
+.sushi {
+    width: 100%;
+    height: auto;
+}
+.sushiDiv{
+    /* width: 100%; */
+}
 .main-stage{
     display: flex;
     justify-content: center;
+    width: 100;
 }
+.inside {
+    display: flex;
+    justify-content: center;
+    width: 100; 
+    height: 100%;
+}
+
+.nav-title{
+    padding: 0 5px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+
+/* Plate */
 #plate {
     display: inline-block;
     width: 40rem;
@@ -58,3 +91,69 @@ body{
    /* Top */
    /* Top */
 }
+
+
+/* Switch */
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
