--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,11 @@ body{
 
 }
 .sushi {
-    width: 100%;
-    height: auto;
+    width: 100px;
+    height: 105px;
 }
 .sushiDiv{
+    /* width: 7rem; */
     /* width: 100%; */
 }
 .main-stage{
@@ -39,26 +40,40 @@ body{
     width: 100;
 }
 .inside {
+    /* width: 100;  */
+    /* height: 100%; */
+    width: 70vw;
+    height: 65vh;
+    
+}
+.flex-selection{
     display: flex;
     justify-content: center;
-    width: 100; 
-    height: 100%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
 }
 
+.grid-selection{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
 .nav-title{
     padding: 0 5px;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.5px;  
 }
 
 
 /* Plate */
 #plate {
     display: inline-block;
-    width: 40rem;
-    height: 25rem;
+    width: 80vw;
+    height: 70vh;
+    /* width: 40rem;
+    height: 30rem; */
     background: white;
     margin: 5em;
     text-align: left;
