--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,37 @@ body{
 
 #navigation{
     width: 100%;
-    height: 40px;
+    height: 50px;
     background-color: black;
     color: white;
     display: flex;
     align-items: center;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: .8px;
+    font-size: 14px;
 }
+
+
+.flex-features{
+    display: none;
+    margin-left: 15px;
+    /* display: flex; */
+    align-items: center;
+    height: 45px;
+}
+.grid-features{
+    display: block;
+    margin-left: 15px;
+}
+
+.nav-title{
+    padding: 0 5px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;  
+}
+
 
 #plate {
     width: 80%;
@@ -51,21 +76,19 @@ body{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    flex-direction: column;
     
 }
 
 .grid-selection{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    
 }
-.nav-title{
-    padding: 0 5px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;  
-}
+
+
+
+
+
 
 
 /* Plate */
@@ -110,13 +133,15 @@ body{
 
 
 /* Switch */
-
+.slider-label{
+    margin: 0 5px;
+}
 /* The switch - the box around the slider */
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 50px;
+    height: 24px;
   }
   
   /* Hide default HTML checkbox */
@@ -142,10 +167,10 @@ body{
   .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
+    height: 20px;
+    width: 20px;
+    left: 1px;
+    bottom: 1px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
@@ -167,7 +192,7 @@ body{
   
   /* Rounded sliders */
   .slider.round {
-    border-radius: 34px;
+    border-radius: 24px;
   }
   
   .slider.round:before {
