--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ body{
     padding: 0;
     background-image: url("../images/wood.jpg");
     background-size: cover;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #navigation{
@@ -84,6 +90,7 @@ body{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     
 }
+
 
 
 
